--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.6.5",
     "gsap": "^3.12.7",
+    "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "15.3.0",
     "react": "^19.0.0",
